responsive design for two breakpoints

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
   <div id="intro">
-    <div id="nav">
+    <div class="clearfix" id="nav">
       <h1>Masthead</h1>
     <h3>Navigation 1</h3>
     <h3>Navigation 2</h3>
@@ -18,11 +18,12 @@
   </div>
   <div id="storyone">
     <div id="storyonepic">
-<img src="img/puppy1.jpg" alt="puppy">
+      <img src="img/puppy1.jpg" alt="puppy">
     </div>
     <h4>Headline</h4>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
   </div>
+  <div id="testblock">
   <div id="picdiv">
 <img src="img/puppy2.jpeg" alt="puppy">
 <img src="img/puppy2.jpeg" alt="puppy">
@@ -33,6 +34,7 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
   </div>
+  <div id="divstories">
   <div id="smalldiv1">
 <img src="img/puppy4.jpeg" alt="puppy">
     <h4>Headline</h4>
@@ -48,5 +50,7 @@
     <h4>Headline</h4>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
   </div>
+</div>
+</div>
   </body>
 </html>
