responsive shuffle of images and breakpoints complete

--- a/index.html
+++ b/index.html
@@ -2,54 +2,34 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Column Flip</title>
+    <title>Feature Shuffle</title>
     <link rel="stylesheet" href="css/style.css" media="screen">
     <meta name="viewport" content="width=device-width">
   </head>
   <body>
-  <div id="intro">
-    <div class="clearfix" id="nav">
-      <h1>Masthead</h1>
-    <h3>Navigation 1</h3>
-    <h3>Navigation 2</h3>
-    <h3>Navigation 3</h3>
-    <h3>Navigation 4</h3>
-  </div>
-  </div>
-  <div id="storyone">
-    <div id="storyonepic">
-      <img src="img/puppy1.jpg" alt="puppy">
+<div class="intro">
+  <h1 id="goaway">Blah</h1>
+  <h1>Blah</h1>
+  <h1>BlahBlahBlah</h1>
+</div>
+<div id="texts">
+  <div id="textone">
+    <div class="pic">
     </div>
-    <h4>Headline</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <h4>Lorem lorem lorem</h4>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</div>
+<div id="texttwo">
+  <div class="pic" id="notme">
   </div>
-  <div id="testblock">
-  <div id="picdiv">
-<img src="img/puppy2.jpeg" alt="puppy">
-<img src="img/puppy2.jpeg" alt="puppy">
-<img src="img/puppy2.jpeg" alt="puppy">
+<h4>Lorem lorem lorem</h4>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</div>
+<div id="textthree">
+  <div class="pic">
   </div>
-  <div id="textdiv">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-  </div>
-  <div id="divstories">
-  <div id="smalldiv1">
-<img src="img/puppy4.jpeg" alt="puppy">
-    <h4>Headline</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-  </div>
-  <div id="smalldiv2">
-<img src="img/puppy4.jpeg" alt="puppy">
-    <h4>Headline</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-  </div>
-  <div id="smalldiv3">
-<img src="img/puppy4.jpeg" alt="puppy">
-    <h4>Headline</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-  </div>
+<h4>Lorem lorem lorem</h4>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
 </div>
   </body>
